--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "library/ZendFramework2"]
 	path = library/ZendFramework2
-	url = git://github.com/zendframework/zf2.git
+	url = git://github.com/EvanDotPro/zf2.git
